--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,6 +13,9 @@ security:
                 login_path: login
                 check_path: login
             logout_on_user_change: true
+            logout:
+              path: logout
+              target: login
 
     encoders:
         App\Entity\Participant:
