--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,7 +28,7 @@ security:
 
     access_control:
       - { path: ^/admin, roles: ROLE_ADMIN }
-      - { path: ^/, roles: ROLE_USER }
+      - { path: ^/profil, roles: ROLE_USER }
 
 
 
