admin villes campus

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,8 +27,8 @@ security:
             algorithm: bcrypt
 
     access_control:
-      - { path: ^/admin, roles: ROLE_ADMIN }
-      - { path: ^/profil, roles: ROLE_USER }
+      # - { path: ^/admin, roles: ROLE_ADMIN }
+      # - { path: ^/profil, roles: ROLE_USER }
 
 
 
