--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,6 +5,9 @@ vich_uploader:
         property_image:
             uri_prefix: /img/properties
             upload_destination: '%kernel.project_dir%/public/img/properties'
+            namer:
+                service: vich_uploader.namer_property
+                options: { property: 'pseudo' }
 
             inject_on_load: false
             delete_on_update: true
