--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/proxy-manager-bridge": "4.4.*",
         "symfony/requirements-checker": "^2.0",
         "symfony/security-bundle": "4.4.*",
+        "symfony/serializer": "4.4.*",
         "symfony/stopwatch": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
         "symfony/validator": "4.4.*",
