--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -13,6 +13,14 @@ vich_uploader:
             delete_on_update: true
             delete_on_remove: true
 
+        property_fichiers:
+            uri_prefix: /data
+            upload_destination: '%kernel.project_dir%/public/data'
+
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true
+
     #mappings:
     #    products:
     #        uri_prefix: /images/products
